--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,156 @@
 
-body{
-    background: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    font-family: "Sedan", serif;
-    margin-bottom: 100px;
+:root {
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167BF7;
+    --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
+    --botao-azul-efeito: #3c92fa;
 }
 
-header{
-    color: rgb(252, 228, 93);
-    margin: 20px;
-    font-size: 25px;
-    justify-content: center;
-    padding-left: 425px;
+body {
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
-.cabeçario{
-    margin: 20px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.borda{
-    color: rgb( 255,237,142);
+.principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 
-
-.texto{
-    margin-right: 10%;
-    font-size: 25px;
-    color: rgb(255, 248, 214);
+.container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
+.container__botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
+}
 
+.botao_secundario {
+    background-color: transparent;
+    border: 2px solid var(--branco-principal)
+}
 
-.começo{
-    background: rgb(201, 150, 23);
-    padding-bottom: 80px;
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
+.container__aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+
+.container__titulo {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.container__imagem {
+    margin: 1em 0 2em 0;
+}
+
+.container__caixa {
+    margin: 0 6em;
+}
+
+.secundario__imagem {
+    width: 80%;
+}
+
+.secundario {
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto {
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
+}
+
+.dispositivos__lista {
     display: flex;
     justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
 }
 
+.dispositivos {
+    text-align: center;
+}
 
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
 
-.categoria{
+.lista__item {
+    font-size: 32px;
+    color: var(--branco-principal);
+}
+
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.rodape__lista {
     display: flex;
-    overflow-x: auto;
-    gap: 10px;
-}
-
-
-
-.videos{
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 40px;
-    margin-bottom: 80px;
-}
-
-.mitos{
-    font-size: 25px;
     justify-content: center;
-    padding-left: 450px;
-    color: rgb( 255,237,142);
+    list-style-type: none;
+    margin-top: 1em;
 }
 
-.categoria img{
- opacity: 0.5;
- height: 150px;
+.lista__link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
 }
 
-.categoria img:hover{
-    opacity: 1.0;
-    border: 2px solid gold
+.rodape__texto {
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
 }
 
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
 
+.lista__link a:active {
+    color: purple;
+}
 
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
+}
